gitops/infrastructure/traefik/ingress_routes.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-dashboard
  namespace: argocd
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`argocd.internal`)
    priority: 10
    services:
    - name: argocd-server
      port: 80
  - kind: Rule
    match: Host(`argocd.internal`) && Header(`Content-Type`, `application/grpc`)
    priority: 11
    services:
    - name: argocd-server
      port: 80
      scheme: h2c
  tls:
    certResolver: default
---
# apiVersion: traefik.io/v1alpha1
# kind: IngressRoute
# metadata:
#   name: pihole-dashboard
#   namespace: pihole
# spec:
#   entryPoints:
#   - websecure
#   routes:
#   - kind: Rule
#     match: Host(`pihole.internal`)
#     services:
#     - name: pihole-web
#       port: 80
#   tls:
#     certResolver: default
